syntax = "proto3";
import "rpc_date.proto";
import "rpc_user.proto";
import "rpc_lecture.proto";


option csharp_namespace = "ElearnGrpc"; 


service CommentService {

  rpc GetAllComments (NewCommentRequest) returns (stream CommentModel);
  rpc CreateNewComment (CommentModel) returns (CommentModel);
}

message NewCommentRequest {
}

message CommentModel {
  int64 id = 1;
  UserModel author = 2;
  LectureModel lecture = 3;
  string text = 4;
  DateModel date = 5;
}


